--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="/">SmartHouse Sensors</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      {{#if user}}
+      <!--{{#if user}}-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -23,14 +23,24 @@
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
         </li>
-        {{else}}
+        <li class="nav-item">
+          <a class="nav-link" href="/links">All Houses</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/links/add">Add a house</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile">Profile</a>
+        </li>
+        <!--{{else}}-->
         <li class="nav-item">
           <a class="nav-link" href="/signin">SignIn</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/signup">SignUp</a>
         </li>
-        {{/if}}
+          
+        <!--{{/if}}-->
     </ul>
   </div>
 </nav>
