--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -6,7 +6,7 @@
                     <h3>SignIn</h3>
                 </div>
                 <div class="card-body">
-                    <img src="logo.png" alt="Logo" class="crad-img-top mx-auto m-2 rounded-circle w-50">
+                    <img src="./login.jpg" alt="Logo" class="crad-img-top mx-auto m-2 rounded-circle w-50">
                     <form action="/signin" method="POST">
                         <div class="form-group">
                             <input type="text" name="username" placeholder="Username" class="form-control">
